fix file-list item z-index issue

--- a/packages/mgt-components/src/components/mgt-contact/mgt-contact.scss
+++ b/packages/mgt-components/src/components/mgt-contact/mgt-contact.scss
@@ -85,7 +85,7 @@
         visibility: hidden;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
 
         svg {
           fill: $contact-copy-icon-color;
